# zero2prod

./: .env  Cargo.toml  Dockerfile  Readme.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20220128195304_make_status_not_null_in_subscriptions.sql  20220128195655_create_subscription_tokens_table.sql  20220225140032_seed_user.sql
scripts/: init_db.sh  init_redis.sh  run_all.sh  watch.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
