[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.16"
config = "0.11.0"
serde = { version = "1.0.115", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1.19", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
tracing-actix-web = "0.5.0-beta.7"
serde-aux = "3.0.1"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
unicode-segmentation = "1.8.0"
validator = "0.14"
secrecy = { version = "0.8", features = ["serde"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.3", features = ["std"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
actix-rt = "2"
once_cell = "1.9.0"
tokio = { version = "1", features = ["rt", "macros"] }
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
